# APT_Attribution_Thesis

./: .gitignore  CLAUDE.md  EXPERIMENT_RESULTS.md  PLAN.md  PLAN_infra_prediction_zh.md  PLAN_zh.md  README.md  discussion_slides.md  method.md  pyproject.toml
VT_results/: overall_summary.json  scan_progress.json  scan_report_20250831_190516.json  scan_report_20250831_233323.json
_碩士論文__黃廷翰_/: main.tex  ntut-labels.tex
docs/: knowledge_graph_json_schema.md
figures/: system_architecture.drawio  system_architecture_infra_prediction.mmd  system_architecture_infra_prediction_zh.mmd  system_architecture_zh.drawio
ioc_clean_code/: clean_iocs_v2.py  clean_iocs_v2_changelog.md
knowledge_graphs/: README.md
notes/: campaign_contamination_analysis.md  related_work_survey.md
org_iocs/: all_iocs.json
org_iocs_cleaned/: README.md  all_cleaning_stats.json
otx_relationships/: fetch_stats.json
scripts/: analyze_multihop.py  analyze_url_quality.py  baselines_link_prediction.py  batch_visualize.py  build_features.py  build_knowledge_graph.py  build_splits.py  build_ttp_features.py  build_vocabularies.py  data_snapshot.json  data_snapshot.py  eval_allnodes_correct_cv.py  eval_confidence_threshold.py  eval_correct_cv.py  eval_edge_type_analysis.py  eval_false_flag.py  eval_graduated_inference.py  eval_groupkfold_ablation.py  eval_groupkfold_l1.py  eval_groupkfold_ttp.py  eval_infra_discovery.py  eval_link_prediction.py  eval_multisignal_fusion.py  eval_noise_filter_sweep.py  eval_overlap_by_report.py  eval_simulated_inference.py  eval_ttp_tiebreak.py  evaluate_openset.py  (+22 more)
(+4207 files in other folders)
