[project]
name = "apt-attribution-thesis"
version = "0.1.0"
description = "APT knowledge graph construction pipeline for master's thesis"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "python-dotenv",
    "networkx",
    "matplotlib",
    "numpy",
    "scipy>=1.17.1",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
    "node2vec>=0.5.0",
    "shap>=0.49.1",
]
