[project]
name = "apt-attribution-thesis"
version = "0.1.0"
description = "APT knowledge graph construction pipeline for master's thesis"
requires-python = ">=3.12"
dependencies = [
    "requests",
    "python-dotenv",
    "networkx",
    "matplotlib",
    "numpy>=2.0.0",
    "scipy",
    "scikit-learn",
    "xgboost",
    "torch>=2.11.0",
    "transformers>=5.4.0",
    "torch-geometric>=2.6.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
